# qrcode-generator-evcxr

./: Cargo.toml  LICENSE  README.md
docs/superpowers/plans/: 2026-03-13-qrcode-generator-evcxr.md
docs/superpowers/specs/: 2026-03-13-qrcode-generator-evcxr-design.md
src/: lib.rs
tests/: draw.rs  qrcodeable.rs  svg_renderer.rs
